--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,24 +14,30 @@ jobs:
         abi: [armeabi-v7a, arm64-v8a, x86, x86_64]
 
     steps:
+      # 1. Checkout
       - name: Checkout
         uses: actions/checkout@v3
 
+      # 2. Set up JDK
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
 
+      # 3. Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Install latest NDK
-        run: sdkmanager --install "ndk;latest"
+      # 4. Install NDK 28.2.13676358
+      - name: Install NDK 28.2.13676358
+        run: sdkmanager --install "ndk;28.2.13676358"
 
-      - name: Configure environment
-        run: echo "ANDROID_NDK_HOME=$ANDROID_SDK_ROOT/ndk/$(ls $ANDROID_SDK_ROOT/ndk | sort -V | tail -n 1)" >> $GITHUB_ENV
+      # 5. Configure environment variable
+      - name: Set ANDROID_NDK_HOME
+        run: echo "ANDROID_NDK_HOME=$ANDROID_SDK_ROOT/ndk/28.2.13676358" >> $GITHUB_ENV
 
+      # 6. Configure CMake
       - name: Configure CMake
         run: |
           cmake -B build-${{ matrix.abi }} \
@@ -40,9 +46,11 @@ jobs:
             -DANDROID_PLATFORM=android-24 \
             -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake
 
+      # 7. Build
       - name: Build
         run: cmake --build build-${{ matrix.abi }} -j
 
+      # 8. Upload Artifact
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
