--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        abi: [armeabi-v7a, arm64-v8a, x86, x86_64]
+        abi: [arm64-v8a]
 
     steps:
       # 1. Checkout
@@ -40,16 +40,15 @@ jobs:
       # 6. Configure CMake
       - name: Configure CMake
         run: |
-          cmake -B build-${{ matrix.abi }} \
-          -DCMAKE_BUILD_TYPE=Release \
-          -DANDROID_ABI=${{ matrix.abi }} \
-          -DANDROID_PLATFORM=android-24 \
+          cmake \
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake \
-          -DLLAMA_CURL=OFF
-
-      # 7. Build
-      - name: Build
-        run: cmake --build build-${{ matrix.abi }} -j
+          -DANDROID_ABI=arm64-v8a \
+          -DANDROID_PLATFORM=android-28 \
+          -DCMAKE_C_FLAGS="-march=armv8.7a" \
+          -DCMAKE_CXX_FLAGS="-march=armv8.7a" \
+          -DGGML_OPENMP=OFF \
+          -DGGML_LLAMAFILE=OFF \
+          -B build-android
 
       # 8. Upload Artifact
       - name: Upload Artifact
