--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,6 +48,7 @@ jobs:
           -DCMAKE_CXX_FLAGS="-march=armv8.7a" \
           -DGGML_OPENMP=OFF \
           -DGGML_LLAMAFILE=OFF \
+          -DLLAMA_CURL=OFF \
           -B build-android
 
       # 8. Upload Artifact
