--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -57,4 +57,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: llama-${{ matrix.abi }}
-          path: build-${{ matrix.abi }}/*.so
+          path: /home/runner/work/llama.cpp/llama.cpp/build-android/*.so
